# vortex

./: LICENSE  README.md  meson.build
data/: org.gnome.Vortex.appdata.xml  org.gnome.Vortex.desktop  vortex.in
flatpak/: org.gnome.Vortex.yml
src/: main.py  window.py
src/core/: engine.py  errors.py  parser.py  queue.py
src/data/: org.gnome.Vortex.gschema.xml
src/pages/: download_page.py  history_page.py  settings_page.py
src/widgets/: download_row.py  format_picker.py  media_card.py  url_bar.py
